--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+    <h1>Test</h1>
     <p>Lorem ipsum dolar sit amet</p>
 </body>    
