Added form.html file

--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
 		}
 
 		/* Add a selector for the id of coffee-box to this css code declaration */
-		 {
+    #coffee-box {
 			background-color: brown;
 		}
 		
 		/* Add a selector for the id of tea-box to this css code declaration */
-		 {
+    #tea-box {
 			 background-color: #6f4e37;
 		}
 
 		/* Add a selector for the id of cold-drinks-box to this css code declaration */
-		 {
+    #cold-drinks-box {
 			background-color: chocolate;
 		}
     
@@ -78,7 +78,7 @@
     <h2>Drinks Menu</h2>
 
 	<!-- Give this div an id of coffee-box -->
-    <div>
+  <div id= "coffee-box">
       <h3>Coffee</h3>
       <ul>
         <li>Latte</li>
@@ -92,7 +92,7 @@
     </div>
 
 	<!-- Give this div an id of tea-box -->
-    <div>
+  <div id= "tea-box">
       <h3>Tea</h3>
       <ul>
         <li>Earl Grey</li>
@@ -105,7 +105,7 @@
     </div>
 
 	<!-- Give this div an id of cold-drinks-box -->
-    <div>
+  <div id= "cold-drinks-box">
       <h3>Cold drinks</h3>
       <ul>
         <li>Iced coffee</li>
